plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    //  id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'kr.kakaocloud'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

compileJava {
    options.compilerArgs += '--enable-preview'
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

compileTestJava {
    options.compilerArgs += '--enable-preview'
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'com.google.firebase:firebase-admin:9.1.1'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.12.1'
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    runtimeOnly 'com.h2database:h2'
}

//clean후 빌드시, STR.이라고 되어있는 부분 빌드 에러뜨면 여기서부터 주석처리
def generated = 'src/main/generated'


sourceSets {
    main.java.srcDir generated
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    querydsl.extendsFrom compileClasspath
}
//여기까지 주석 그리고

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-parameters'
}

//def generatedDir = 'src/main/generated'
//
//clean {
//    delete file(generatedDir)
//}
